Handle null values in TopologyConverter and benchmark edgeless topologies